--- a/homework3/hex_display.qsf
+++ b/homework3/hex_display.qsf
@@ -44,3 +44,7 @@ set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:15:13  MARCH 03, 2021
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
 set_global_assignment -name SOURCE_FILE 04_hex_display.qsf
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
